Fixed issue with extra white space on home page

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 img {
   width: 100%;
   height: auto;
